// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio in RTL renders AsFormItem 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        dir="rtl"
      >
        <input
          checked=""
          hidden=""
          name="Form Item"
          readonly=""
          style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px; display: none;"
          type="radio"
          value=""
        />
        <div
          id="headlessui-radiogroup-:r14:"
          role="radiogroup"
        >
          <div
            aria-checked="false"
            class="flex gap-2 cursor-pointer text-moon-14 text-bulma moon-disabled:opacity-30 moon-disabled:cursor-default"
            data-headlessui-state=""
            id="headlessui-radiogroup-option-:r15:"
            role="radio"
            tabindex="0"
          >
            <div
              class="relative flex items-center justify-center w-4 h-4 aspect-square m-1 rounded-full border transition-colors after:content-[\\"\\"] after:absolute after:w-0 after:h-0 after:rounded-full after:top-1/2 after:left-1/2 after:-translate-x-1/2 after:-translate-y-1/2 after:transition-all moon-checked:after:w-2 moon-checked:after:h-2 border-trunks moon-checked:border-piccolo after:bg-piccolo"
            />
            Option 1
          </div>
          <div
            aria-checked="false"
            class="flex gap-2 cursor-pointer text-moon-14 text-bulma moon-disabled:opacity-30 moon-disabled:cursor-default"
            data-headlessui-state=""
            id="headlessui-radiogroup-option-:r16:"
            role="radio"
            tabindex="-1"
          >
            <div
              class="relative flex items-center justify-center w-4 h-4 aspect-square m-1 rounded-full border transition-colors after:content-[\\"\\"] after:absolute after:w-0 after:h-0 after:rounded-full after:top-1/2 after:left-1/2 after:-translate-x-1/2 after:-translate-y-1/2 after:transition-all moon-checked:after:w-2 moon-checked:after:h-2 border-trunks moon-checked:border-piccolo after:bg-piccolo"
            />
            Option 2
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      dir="rtl"
    >
      <input
        checked=""
        hidden=""
        name="Form Item"
        readonly=""
        style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px; display: none;"
        type="radio"
        value=""
      />
      <div
        id="headlessui-radiogroup-:r14:"
        role="radiogroup"
      >
        <div
          aria-checked="false"
          class="flex gap-2 cursor-pointer text-moon-14 text-bulma moon-disabled:opacity-30 moon-disabled:cursor-default"
          data-headlessui-state=""
          id="headlessui-radiogroup-option-:r15:"
          role="radio"
          tabindex="0"
        >
          <div
            class="relative flex items-center justify-center w-4 h-4 aspect-square m-1 rounded-full border transition-colors after:content-[\\"\\"] after:absolute after:w-0 after:h-0 after:rounded-full after:top-1/2 after:left-1/2 after:-translate-x-1/2 after:-translate-y-1/2 after:transition-all moon-checked:after:w-2 moon-checked:after:h-2 border-trunks moon-checked:border-piccolo after:bg-piccolo"
          />
          Option 1
        </div>
        <div
          aria-checked="false"
          class="flex gap-2 cursor-pointer text-moon-14 text-bulma moon-disabled:opacity-30 moon-disabled:cursor-default"
          data-headlessui-state=""
          id="headlessui-radiogroup-option-:r16:"
          role="radio"
          tabindex="-1"
        >
          <div
            class="relative flex items-center justify-center w-4 h-4 aspect-square m-1 rounded-full border transition-colors after:content-[\\"\\"] after:absolute after:w-0 after:h-0 after:rounded-full after:top-1/2 after:left-1/2 after:-translate-x-1/2 after:-translate-y-1/2 after:transition-all moon-checked:after:w-2 moon-checked:after:h-2 border-trunks moon-checked:border-piccolo after:bg-piccolo"
          />
          Option 2
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Radio in RTL renders Customization 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        dir="rtl"
      >
        <div
          class="flex gap-4"
          id="headlessui-radiogroup-:rr:"
          role="radiogroup"
        >
          <div
            aria-checked="false"
            class="flex gap-2 cursor-pointer text-moon-14 text-bulma moon-disabled:opacity-30 moon-disabled:cursor-default"
            data-headlessui-state=""
            id="headlessui-radiogroup-option-:rs:"
            role="radio"
            tabindex="0"
          >
            <div
              class="relative flex items-center justify-center w-4 h-4 aspect-square m-1 rounded-full border transition-colors after:content-[\\"\\"] after:absolute after:w-0 after:h-0 after:rounded-full after:top-1/2 after:left-1/2 after:-translate-x-1/2 after:-translate-y-1/2 after:transition-all moon-checked:after:w-2 moon-checked:after:h-2 border-trunks moon-checked:border-piccolo after:bg-piccolo"
            />
            Option 1
          </div>
          <div
            aria-checked="false"
            class="flex gap-2 cursor-pointer text-moon-14 text-bulma moon-disabled:opacity-30 moon-disabled:cursor-default"
            data-headlessui-state=""
            id="headlessui-radiogroup-option-:rt:"
            role="radio"
            tabindex="-1"
          >
            <div
              class="relative flex items-center justify-center w-4 h-4 aspect-square m-1 rounded-full border transition-colors after:content-[\\"\\"] after:absolute after:w-0 after:h-0 after:rounded-full after:top-1/2 after:left-1/2 after:-translate-x-1/2 after:-translate-y-1/2 after:transition-all moon-checked:after:w-2 moon-checked:after:h-2 border-trunks moon-checked:border-piccolo after:bg-piccolo"
            />
            Option 2
          </div>
        </div>
        <div
          id="headlessui-radiogroup-:ru:"
          role="radiogroup"
        >
          <div
            aria-checked="false"
            class="flex gap-2 cursor-pointer text-moon-14 text-bulma moon-disabled:opacity-30 moon-disabled:cursor-default w-48 p-2 justify-between hover:bg-gohan transition-colors rounded-moon-i-sm"
            data-headlessui-state=""
            id="headlessui-radiogroup-option-:rv:"
            role="radio"
            tabindex="0"
          >
            Option 1
            <div
              class="relative flex items-center justify-center w-4 h-4 aspect-square m-1 rounded-full border transition-colors after:content-[\\"\\"] after:absolute after:w-0 after:h-0 after:rounded-full after:top-1/2 after:left-1/2 after:-translate-x-1/2 after:-translate-y-1/2 after:transition-all moon-checked:after:w-2 moon-checked:after:h-2 border-trunks moon-checked:border-piccolo after:bg-piccolo"
            />
          </div>
          <div
            aria-checked="false"
            class="flex gap-2 cursor-pointer text-moon-14 text-bulma moon-disabled:opacity-30 moon-disabled:cursor-default w-48 p-2 justify-between hover:bg-gohan transition-colors rounded-moon-i-sm"
            data-headlessui-state=""
            id="headlessui-radiogroup-option-:r10:"
            role="radio"
            tabindex="-1"
          >
            Option 2
            <div
              class="relative flex items-center justify-center w-4 h-4 aspect-square m-1 rounded-full border transition-colors after:content-[\\"\\"] after:absolute after:w-0 after:h-0 after:rounded-full after:top-1/2 after:left-1/2 after:-translate-x-1/2 after:-translate-y-1/2 after:transition-all moon-checked:after:w-2 moon-checked:after:h-2 border-trunks moon-checked:border-piccolo after:bg-piccolo"
            />
          </div>
        </div>
        <div
          id="headlessui-radiogroup-:r11:"
          role="radiogroup"
        >
          <div
            aria-checked="false"
            class="flex gap-2 cursor-pointer text-moon-14 text-bulma moon-disabled:opacity-30 moon-disabled:cursor-default"
            data-headlessui-state=""
            id="headlessui-radiogroup-option-:r12:"
            role="radio"
            tabindex="0"
          >
            <div
              class="relative flex items-center justify-center w-4 h-4 aspect-square m-1 rounded-full border transition-colors after:content-[\\"\\"] after:absolute after:w-0 after:h-0 after:rounded-full after:top-1/2 after:left-1/2 after:-translate-x-1/2 after:-translate-y-1/2 after:transition-all moon-checked:after:w-2 moon-checked:after:h-2 moon-checked:border-piccolo after:bg-piccolo border-chichi"
            />
            Option 1
          </div>
          <div
            aria-checked="false"
            class="flex gap-2 cursor-pointer text-moon-14 text-bulma moon-disabled:opacity-30 moon-disabled:cursor-default"
            data-headlessui-state=""
            id="headlessui-radiogroup-option-:r13:"
            role="radio"
            tabindex="-1"
          >
            <div
              class="relative flex items-center justify-center w-4 h-4 aspect-square m-1 rounded-full border transition-colors after:content-[\\"\\"] after:absolute after:w-0 after:h-0 after:rounded-full after:top-1/2 after:left-1/2 after:-translate-x-1/2 after:-translate-y-1/2 after:transition-all moon-checked:after:w-2 moon-checked:after:h-2 border-trunks moon-checked:border-nappa after:bg-nappa"
            />
            Option 2
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      dir="rtl"
    >
      <div
        class="flex gap-4"
        id="headlessui-radiogroup-:rr:"
        role="radiogroup"
      >
        <div
          aria-checked="false"
          class="flex gap-2 cursor-pointer text-moon-14 text-bulma moon-disabled:opacity-30 moon-disabled:cursor-default"
          data-headlessui-state=""
          id="headlessui-radiogroup-option-:rs:"
          role="radio"
          tabindex="0"
        >
          <div
            class="relative flex items-center justify-center w-4 h-4 aspect-square m-1 rounded-full border transition-colors after:content-[\\"\\"] after:absolute after:w-0 after:h-0 after:rounded-full after:top-1/2 after:left-1/2 after:-translate-x-1/2 after:-translate-y-1/2 after:transition-all moon-checked:after:w-2 moon-checked:after:h-2 border-trunks moon-checked:border-piccolo after:bg-piccolo"
          />
          Option 1
        </div>
        <div
          aria-checked="false"
          class="flex gap-2 cursor-pointer text-moon-14 text-bulma moon-disabled:opacity-30 moon-disabled:cursor-default"
          data-headlessui-state=""
          id="headlessui-radiogroup-option-:rt:"
          role="radio"
          tabindex="-1"
        >
          <div
            class="relative flex items-center justify-center w-4 h-4 aspect-square m-1 rounded-full border transition-colors after:content-[\\"\\"] after:absolute after:w-0 after:h-0 after:rounded-full after:top-1/2 after:left-1/2 after:-translate-x-1/2 after:-translate-y-1/2 after:transition-all moon-checked:after:w-2 moon-checked:after:h-2 border-trunks moon-checked:border-piccolo after:bg-piccolo"
          />
          Option 2
        </div>
      </div>
      <div
        id="headlessui-radiogroup-:ru:"
        role="radiogroup"
      >
        <div
          aria-checked="false"
          class="flex gap-2 cursor-pointer text-moon-14 text-bulma moon-disabled:opacity-30 moon-disabled:cursor-default w-48 p-2 justify-between hover:bg-gohan transition-colors rounded-moon-i-sm"
          data-headlessui-state=""
          id="headlessui-radiogroup-option-:rv:"
          role="radio"
          tabindex="0"
        >
          Option 1
          <div
            class="relative flex items-center justify-center w-4 h-4 aspect-square m-1 rounded-full border transition-colors after:content-[\\"\\"] after:absolute after:w-0 after:h-0 after:rounded-full after:top-1/2 after:left-1/2 after:-translate-x-1/2 after:-translate-y-1/2 after:transition-all moon-checked:after:w-2 moon-checked:after:h-2 border-trunks moon-checked:border-piccolo after:bg-piccolo"
          />
        </div>
        <div
          aria-checked="false"
          class="flex gap-2 cursor-pointer text-moon-14 text-bulma moon-disabled:opacity-30 moon-disabled:cursor-default w-48 p-2 justify-between hover:bg-gohan transition-colors rounded-moon-i-sm"
          data-headlessui-state=""
          id="headlessui-radiogroup-option-:r10:"
          role="radio"
          tabindex="-1"
        >
          Option 2
          <div
            class="relative flex items-center justify-center w-4 h-4 aspect-square m-1 rounded-full border transition-colors after:content-[\\"\\"] after:absolute after:w-0 after:h-0 after:rounded-full after:top-1/2 after:left-1/2 after:-translate-x-1/2 after:-translate-y-1/2 after:transition-all moon-checked:after:w-2 moon-checked:after:h-2 border-trunks moon-checked:border-piccolo after:bg-piccolo"
          />
        </div>
      </div>
      <div
        id="headlessui-radiogroup-:r11:"
        role="radiogroup"
      >
        <div
          aria-checked="false"
          class="flex gap-2 cursor-pointer text-moon-14 text-bulma moon-disabled:opacity-30 moon-disabled:cursor-default"
          data-headlessui-state=""
          id="headlessui-radiogroup-option-:r12:"
          role="radio"
          tabindex="0"
        >
          <div
            class="relative flex items-center justify-center w-4 h-4 aspect-square m-1 rounded-full border transition-colors after:content-[\\"\\"] after:absolute after:w-0 after:h-0 after:rounded-full after:top-1/2 after:left-1/2 after:-translate-x-1/2 after:-translate-y-1/2 after:transition-all moon-checked:after:w-2 moon-checked:after:h-2 moon-checked:border-piccolo after:bg-piccolo border-chichi"
          />
          Option 1
        </div>
        <div
          aria-checked="false"
          class="flex gap-2 cursor-pointer text-moon-14 text-bulma moon-disabled:opacity-30 moon-disabled:cursor-default"
          data-headlessui-state=""
          id="headlessui-radiogroup-option-:r13:"
          role="radio"
          tabindex="-1"
        >
          <div
            class="relative flex items-center justify-center w-4 h-4 aspect-square m-1 rounded-full border transition-colors after:content-[\\"\\"] after:absolute after:w-0 after:h-0 after:rounded-full after:top-1/2 after:left-1/2 after:-translate-x-1/2 after:-translate-y-1/2 after:transition-all moon-checked:after:w-2 moon-checked:after:h-2 border-trunks moon-checked:border-nappa after:bg-nappa"
          />
          Option 2
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Radio in RTL renders Default 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        dir="rtl"
      >
        <div
          id="headlessui-radiogroup-:rl:"
          role="radiogroup"
        >
          <div
            aria-checked="false"
            class="flex gap-2 cursor-pointer text-moon-14 text-bulma moon-disabled:opacity-30 moon-disabled:cursor-default"
            data-headlessui-state=""
            id="headlessui-radiogroup-option-:rm:"
            role="radio"
            tabindex="0"
          >
            <div
              class="relative flex items-center justify-center w-4 h-4 aspect-square m-1 rounded-full border transition-colors after:content-[\\"\\"] after:absolute after:w-0 after:h-0 after:rounded-full after:top-1/2 after:left-1/2 after:-translate-x-1/2 after:-translate-y-1/2 after:transition-all moon-checked:after:w-2 moon-checked:after:h-2 border-trunks moon-checked:border-piccolo after:bg-piccolo"
            />
          </div>
          <div
            aria-checked="false"
            class="flex gap-2 cursor-pointer text-moon-14 text-bulma moon-disabled:opacity-30 moon-disabled:cursor-default"
            data-headlessui-state=""
            id="headlessui-radiogroup-option-:rn:"
            role="radio"
            tabindex="-1"
          >
            <div
              class="relative flex items-center justify-center w-4 h-4 aspect-square m-1 rounded-full border transition-colors after:content-[\\"\\"] after:absolute after:w-0 after:h-0 after:rounded-full after:top-1/2 after:left-1/2 after:-translate-x-1/2 after:-translate-y-1/2 after:transition-all moon-checked:after:w-2 moon-checked:after:h-2 border-trunks moon-checked:border-piccolo after:bg-piccolo"
            />
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      dir="rtl"
    >
      <div
        id="headlessui-radiogroup-:rl:"
        role="radiogroup"
      >
        <div
          aria-checked="false"
          class="flex gap-2 cursor-pointer text-moon-14 text-bulma moon-disabled:opacity-30 moon-disabled:cursor-default"
          data-headlessui-state=""
          id="headlessui-radiogroup-option-:rm:"
          role="radio"
          tabindex="0"
        >
          <div
            class="relative flex items-center justify-center w-4 h-4 aspect-square m-1 rounded-full border transition-colors after:content-[\\"\\"] after:absolute after:w-0 after:h-0 after:rounded-full after:top-1/2 after:left-1/2 after:-translate-x-1/2 after:-translate-y-1/2 after:transition-all moon-checked:after:w-2 moon-checked:after:h-2 border-trunks moon-checked:border-piccolo after:bg-piccolo"
          />
        </div>
        <div
          aria-checked="false"
          class="flex gap-2 cursor-pointer text-moon-14 text-bulma moon-disabled:opacity-30 moon-disabled:cursor-default"
          data-headlessui-state=""
          id="headlessui-radiogroup-option-:rn:"
          role="radio"
          tabindex="-1"
        >
          <div
            class="relative flex items-center justify-center w-4 h-4 aspect-square m-1 rounded-full border transition-colors after:content-[\\"\\"] after:absolute after:w-0 after:h-0 after:rounded-full after:top-1/2 after:left-1/2 after:-translate-x-1/2 after:-translate-y-1/2 after:transition-all moon-checked:after:w-2 moon-checked:after:h-2 border-trunks moon-checked:border-piccolo after:bg-piccolo"
          />
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Radio in RTL renders Uncontrolled 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        dir="rtl"
      >
        <div
          id="headlessui-radiogroup-:r17:"
          role="radiogroup"
        >
          <div
            aria-checked="false"
            class="flex gap-2 cursor-pointer text-moon-14 text-bulma moon-disabled:opacity-30 moon-disabled:cursor-default"
            data-headlessui-state=""
            id="headlessui-radiogroup-option-:r18:"
            role="radio"
            tabindex="-1"
          >
            <div
              class="relative flex items-center justify-center w-4 h-4 aspect-square m-1 rounded-full border transition-colors after:content-[\\"\\"] after:absolute after:w-0 after:h-0 after:rounded-full after:top-1/2 after:left-1/2 after:-translate-x-1/2 after:-translate-y-1/2 after:transition-all moon-checked:after:w-2 moon-checked:after:h-2 border-trunks moon-checked:border-piccolo after:bg-piccolo"
            />
            Option 1
          </div>
          <div
            aria-checked="true"
            class="flex gap-2 cursor-pointer text-moon-14 text-bulma moon-disabled:opacity-30 moon-disabled:cursor-default"
            data-headlessui-state="checked"
            id="headlessui-radiogroup-option-:r19:"
            role="radio"
            tabindex="0"
          >
            <div
              class="relative flex items-center justify-center w-4 h-4 aspect-square m-1 rounded-full border transition-colors after:content-[\\"\\"] after:absolute after:w-0 after:h-0 after:rounded-full after:top-1/2 after:left-1/2 after:-translate-x-1/2 after:-translate-y-1/2 after:transition-all moon-checked:after:w-2 moon-checked:after:h-2 border-trunks moon-checked:border-piccolo after:bg-piccolo"
            />
            Option 2
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      dir="rtl"
    >
      <div
        id="headlessui-radiogroup-:r17:"
        role="radiogroup"
      >
        <div
          aria-checked="false"
          class="flex gap-2 cursor-pointer text-moon-14 text-bulma moon-disabled:opacity-30 moon-disabled:cursor-default"
          data-headlessui-state=""
          id="headlessui-radiogroup-option-:r18:"
          role="radio"
          tabindex="-1"
        >
          <div
            class="relative flex items-center justify-center w-4 h-4 aspect-square m-1 rounded-full border transition-colors after:content-[\\"\\"] after:absolute after:w-0 after:h-0 after:rounded-full after:top-1/2 after:left-1/2 after:-translate-x-1/2 after:-translate-y-1/2 after:transition-all moon-checked:after:w-2 moon-checked:after:h-2 border-trunks moon-checked:border-piccolo after:bg-piccolo"
          />
          Option 1
        </div>
        <div
          aria-checked="true"
          class="flex gap-2 cursor-pointer text-moon-14 text-bulma moon-disabled:opacity-30 moon-disabled:cursor-default"
          data-headlessui-state="checked"
          id="headlessui-radiogroup-option-:r19:"
          role="radio"
          tabindex="0"
        >
          <div
            class="relative flex items-center justify-center w-4 h-4 aspect-square m-1 rounded-full border transition-colors after:content-[\\"\\"] after:absolute after:w-0 after:h-0 after:rounded-full after:top-1/2 after:left-1/2 after:-translate-x-1/2 after:-translate-y-1/2 after:transition-all moon-checked:after:w-2 moon-checked:after:h-2 border-trunks moon-checked:border-piccolo after:bg-piccolo"
          />
          Option 2
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Radio in RTL renders WithLabel 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        dir="rtl"
      >
        <div
          id="headlessui-radiogroup-:ro:"
          role="radiogroup"
        >
          <div
            aria-checked="false"
            aria-disabled="true"
            class="flex gap-2 cursor-pointer text-moon-14 text-bulma moon-disabled:opacity-30 moon-disabled:cursor-default"
            data-headlessui-state="disabled"
            id="headlessui-radiogroup-option-:rp:"
            role="radio"
            tabindex="-1"
          >
            <div
              class="relative flex items-center justify-center w-4 h-4 aspect-square m-1 rounded-full border transition-colors after:content-[\\"\\"] after:absolute after:w-0 after:h-0 after:rounded-full after:top-1/2 after:left-1/2 after:-translate-x-1/2 after:-translate-y-1/2 after:transition-all moon-checked:after:w-2 moon-checked:after:h-2 border-trunks moon-checked:border-piccolo after:bg-piccolo"
            />
            Option 1
          </div>
          <div
            aria-checked="false"
            aria-disabled="true"
            class="flex gap-2 cursor-pointer text-moon-14 text-bulma moon-disabled:opacity-30 moon-disabled:cursor-default"
            data-headlessui-state="disabled"
            id="headlessui-radiogroup-option-:rq:"
            role="radio"
            tabindex="-1"
          >
            <div
              class="relative flex items-center justify-center w-4 h-4 aspect-square m-1 rounded-full border transition-colors after:content-[\\"\\"] after:absolute after:w-0 after:h-0 after:rounded-full after:top-1/2 after:left-1/2 after:-translate-x-1/2 after:-translate-y-1/2 after:transition-all moon-checked:after:w-2 moon-checked:after:h-2 border-trunks moon-checked:border-piccolo after:bg-piccolo"
            />
            Option 2
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      dir="rtl"
    >
      <div
        id="headlessui-radiogroup-:ro:"
        role="radiogroup"
      >
        <div
          aria-checked="false"
          aria-disabled="true"
          class="flex gap-2 cursor-pointer text-moon-14 text-bulma moon-disabled:opacity-30 moon-disabled:cursor-default"
          data-headlessui-state="disabled"
          id="headlessui-radiogroup-option-:rp:"
          role="radio"
          tabindex="-1"
        >
          <div
            class="relative flex items-center justify-center w-4 h-4 aspect-square m-1 rounded-full border transition-colors after:content-[\\"\\"] after:absolute after:w-0 after:h-0 after:rounded-full after:top-1/2 after:left-1/2 after:-translate-x-1/2 after:-translate-y-1/2 after:transition-all moon-checked:after:w-2 moon-checked:after:h-2 border-trunks moon-checked:border-piccolo after:bg-piccolo"
          />
          Option 1
        </div>
        <div
          aria-checked="false"
          aria-disabled="true"
          class="flex gap-2 cursor-pointer text-moon-14 text-bulma moon-disabled:opacity-30 moon-disabled:cursor-default"
          data-headlessui-state="disabled"
          id="headlessui-radiogroup-option-:rq:"
          role="radio"
          tabindex="-1"
        >
          <div
            class="relative flex items-center justify-center w-4 h-4 aspect-square m-1 rounded-full border transition-colors after:content-[\\"\\"] after:absolute after:w-0 after:h-0 after:rounded-full after:top-1/2 after:left-1/2 after:-translate-x-1/2 after:-translate-y-1/2 after:transition-all moon-checked:after:w-2 moon-checked:after:h-2 border-trunks moon-checked:border-piccolo after:bg-piccolo"
          />
          Option 2
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Radio renders AsFormItem 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <input
        checked=""
        hidden=""
        name="Form Item"
        readonly=""
        style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px; display: none;"
        type="radio"
        value=""
      />
      <div
        id="headlessui-radiogroup-:rf:"
        role="radiogroup"
      >
        <div
          aria-checked="false"
          class="flex gap-2 cursor-pointer text-moon-14 text-bulma moon-disabled:opacity-30 moon-disabled:cursor-default"
          data-headlessui-state=""
          id="headlessui-radiogroup-option-:rg:"
          role="radio"
          tabindex="0"
        >
          <div
            class="relative flex items-center justify-center w-4 h-4 aspect-square m-1 rounded-full border transition-colors after:content-[\\"\\"] after:absolute after:w-0 after:h-0 after:rounded-full after:top-1/2 after:left-1/2 after:-translate-x-1/2 after:-translate-y-1/2 after:transition-all moon-checked:after:w-2 moon-checked:after:h-2 border-trunks moon-checked:border-piccolo after:bg-piccolo"
          />
          Option 1
        </div>
        <div
          aria-checked="false"
          class="flex gap-2 cursor-pointer text-moon-14 text-bulma moon-disabled:opacity-30 moon-disabled:cursor-default"
          data-headlessui-state=""
          id="headlessui-radiogroup-option-:rh:"
          role="radio"
          tabindex="-1"
        >
          <div
            class="relative flex items-center justify-center w-4 h-4 aspect-square m-1 rounded-full border transition-colors after:content-[\\"\\"] after:absolute after:w-0 after:h-0 after:rounded-full after:top-1/2 after:left-1/2 after:-translate-x-1/2 after:-translate-y-1/2 after:transition-all moon-checked:after:w-2 moon-checked:after:h-2 border-trunks moon-checked:border-piccolo after:bg-piccolo"
          />
          Option 2
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <input
      checked=""
      hidden=""
      name="Form Item"
      readonly=""
      style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px; display: none;"
      type="radio"
      value=""
    />
    <div
      id="headlessui-radiogroup-:rf:"
      role="radiogroup"
    >
      <div
        aria-checked="false"
        class="flex gap-2 cursor-pointer text-moon-14 text-bulma moon-disabled:opacity-30 moon-disabled:cursor-default"
        data-headlessui-state=""
        id="headlessui-radiogroup-option-:rg:"
        role="radio"
        tabindex="0"
      >
        <div
          class="relative flex items-center justify-center w-4 h-4 aspect-square m-1 rounded-full border transition-colors after:content-[\\"\\"] after:absolute after:w-0 after:h-0 after:rounded-full after:top-1/2 after:left-1/2 after:-translate-x-1/2 after:-translate-y-1/2 after:transition-all moon-checked:after:w-2 moon-checked:after:h-2 border-trunks moon-checked:border-piccolo after:bg-piccolo"
        />
        Option 1
      </div>
      <div
        aria-checked="false"
        class="flex gap-2 cursor-pointer text-moon-14 text-bulma moon-disabled:opacity-30 moon-disabled:cursor-default"
        data-headlessui-state=""
        id="headlessui-radiogroup-option-:rh:"
        role="radio"
        tabindex="-1"
      >
        <div
          class="relative flex items-center justify-center w-4 h-4 aspect-square m-1 rounded-full border transition-colors after:content-[\\"\\"] after:absolute after:w-0 after:h-0 after:rounded-full after:top-1/2 after:left-1/2 after:-translate-x-1/2 after:-translate-y-1/2 after:transition-all moon-checked:after:w-2 moon-checked:after:h-2 border-trunks moon-checked:border-piccolo after:bg-piccolo"
        />
        Option 2
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Radio renders Customization 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex gap-4"
        id="headlessui-radiogroup-:r6:"
        role="radiogroup"
      >
        <div
          aria-checked="false"
          class="flex gap-2 cursor-pointer text-moon-14 text-bulma moon-disabled:opacity-30 moon-disabled:cursor-default"
          data-headlessui-state=""
          id="headlessui-radiogroup-option-:r7:"
          role="radio"
          tabindex="0"
        >
          <div
            class="relative flex items-center justify-center w-4 h-4 aspect-square m-1 rounded-full border transition-colors after:content-[\\"\\"] after:absolute after:w-0 after:h-0 after:rounded-full after:top-1/2 after:left-1/2 after:-translate-x-1/2 after:-translate-y-1/2 after:transition-all moon-checked:after:w-2 moon-checked:after:h-2 border-trunks moon-checked:border-piccolo after:bg-piccolo"
          />
          Option 1
        </div>
        <div
          aria-checked="false"
          class="flex gap-2 cursor-pointer text-moon-14 text-bulma moon-disabled:opacity-30 moon-disabled:cursor-default"
          data-headlessui-state=""
          id="headlessui-radiogroup-option-:r8:"
          role="radio"
          tabindex="-1"
        >
          <div
            class="relative flex items-center justify-center w-4 h-4 aspect-square m-1 rounded-full border transition-colors after:content-[\\"\\"] after:absolute after:w-0 after:h-0 after:rounded-full after:top-1/2 after:left-1/2 after:-translate-x-1/2 after:-translate-y-1/2 after:transition-all moon-checked:after:w-2 moon-checked:after:h-2 border-trunks moon-checked:border-piccolo after:bg-piccolo"
          />
          Option 2
        </div>
      </div>
      <div
        id="headlessui-radiogroup-:r9:"
        role="radiogroup"
      >
        <div
          aria-checked="false"
          class="flex gap-2 cursor-pointer text-moon-14 text-bulma moon-disabled:opacity-30 moon-disabled:cursor-default w-48 p-2 justify-between hover:bg-gohan transition-colors rounded-moon-i-sm"
          data-headlessui-state=""
          id="headlessui-radiogroup-option-:ra:"
          role="radio"
          tabindex="0"
        >
          Option 1
          <div
            class="relative flex items-center justify-center w-4 h-4 aspect-square m-1 rounded-full border transition-colors after:content-[\\"\\"] after:absolute after:w-0 after:h-0 after:rounded-full after:top-1/2 after:left-1/2 after:-translate-x-1/2 after:-translate-y-1/2 after:transition-all moon-checked:after:w-2 moon-checked:after:h-2 border-trunks moon-checked:border-piccolo after:bg-piccolo"
          />
        </div>
        <div
          aria-checked="false"
          class="flex gap-2 cursor-pointer text-moon-14 text-bulma moon-disabled:opacity-30 moon-disabled:cursor-default w-48 p-2 justify-between hover:bg-gohan transition-colors rounded-moon-i-sm"
          data-headlessui-state=""
          id="headlessui-radiogroup-option-:rb:"
          role="radio"
          tabindex="-1"
        >
          Option 2
          <div
            class="relative flex items-center justify-center w-4 h-4 aspect-square m-1 rounded-full border transition-colors after:content-[\\"\\"] after:absolute after:w-0 after:h-0 after:rounded-full after:top-1/2 after:left-1/2 after:-translate-x-1/2 after:-translate-y-1/2 after:transition-all moon-checked:after:w-2 moon-checked:after:h-2 border-trunks moon-checked:border-piccolo after:bg-piccolo"
          />
        </div>
      </div>
      <div
        id="headlessui-radiogroup-:rc:"
        role="radiogroup"
      >
        <div
          aria-checked="false"
          class="flex gap-2 cursor-pointer text-moon-14 text-bulma moon-disabled:opacity-30 moon-disabled:cursor-default"
          data-headlessui-state=""
          id="headlessui-radiogroup-option-:rd:"
          role="radio"
          tabindex="0"
        >
          <div
            class="relative flex items-center justify-center w-4 h-4 aspect-square m-1 rounded-full border transition-colors after:content-[\\"\\"] after:absolute after:w-0 after:h-0 after:rounded-full after:top-1/2 after:left-1/2 after:-translate-x-1/2 after:-translate-y-1/2 after:transition-all moon-checked:after:w-2 moon-checked:after:h-2 moon-checked:border-piccolo after:bg-piccolo border-chichi"
          />
          Option 1
        </div>
        <div
          aria-checked="false"
          class="flex gap-2 cursor-pointer text-moon-14 text-bulma moon-disabled:opacity-30 moon-disabled:cursor-default"
          data-headlessui-state=""
          id="headlessui-radiogroup-option-:re:"
          role="radio"
          tabindex="-1"
        >
          <div
            class="relative flex items-center justify-center w-4 h-4 aspect-square m-1 rounded-full border transition-colors after:content-[\\"\\"] after:absolute after:w-0 after:h-0 after:rounded-full after:top-1/2 after:left-1/2 after:-translate-x-1/2 after:-translate-y-1/2 after:transition-all moon-checked:after:w-2 moon-checked:after:h-2 border-trunks moon-checked:border-nappa after:bg-nappa"
          />
          Option 2
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex gap-4"
      id="headlessui-radiogroup-:r6:"
      role="radiogroup"
    >
      <div
        aria-checked="false"
        class="flex gap-2 cursor-pointer text-moon-14 text-bulma moon-disabled:opacity-30 moon-disabled:cursor-default"
        data-headlessui-state=""
        id="headlessui-radiogroup-option-:r7:"
        role="radio"
        tabindex="0"
      >
        <div
          class="relative flex items-center justify-center w-4 h-4 aspect-square m-1 rounded-full border transition-colors after:content-[\\"\\"] after:absolute after:w-0 after:h-0 after:rounded-full after:top-1/2 after:left-1/2 after:-translate-x-1/2 after:-translate-y-1/2 after:transition-all moon-checked:after:w-2 moon-checked:after:h-2 border-trunks moon-checked:border-piccolo after:bg-piccolo"
        />
        Option 1
      </div>
      <div
        aria-checked="false"
        class="flex gap-2 cursor-pointer text-moon-14 text-bulma moon-disabled:opacity-30 moon-disabled:cursor-default"
        data-headlessui-state=""
        id="headlessui-radiogroup-option-:r8:"
        role="radio"
        tabindex="-1"
      >
        <div
          class="relative flex items-center justify-center w-4 h-4 aspect-square m-1 rounded-full border transition-colors after:content-[\\"\\"] after:absolute after:w-0 after:h-0 after:rounded-full after:top-1/2 after:left-1/2 after:-translate-x-1/2 after:-translate-y-1/2 after:transition-all moon-checked:after:w-2 moon-checked:after:h-2 border-trunks moon-checked:border-piccolo after:bg-piccolo"
        />
        Option 2
      </div>
    </div>
    <div
      id="headlessui-radiogroup-:r9:"
      role="radiogroup"
    >
      <div
        aria-checked="false"
        class="flex gap-2 cursor-pointer text-moon-14 text-bulma moon-disabled:opacity-30 moon-disabled:cursor-default w-48 p-2 justify-between hover:bg-gohan transition-colors rounded-moon-i-sm"
        data-headlessui-state=""
        id="headlessui-radiogroup-option-:ra:"
        role="radio"
        tabindex="0"
      >
        Option 1
        <div
          class="relative flex items-center justify-center w-4 h-4 aspect-square m-1 rounded-full border transition-colors after:content-[\\"\\"] after:absolute after:w-0 after:h-0 after:rounded-full after:top-1/2 after:left-1/2 after:-translate-x-1/2 after:-translate-y-1/2 after:transition-all moon-checked:after:w-2 moon-checked:after:h-2 border-trunks moon-checked:border-piccolo after:bg-piccolo"
        />
      </div>
      <div
        aria-checked="false"
        class="flex gap-2 cursor-pointer text-moon-14 text-bulma moon-disabled:opacity-30 moon-disabled:cursor-default w-48 p-2 justify-between hover:bg-gohan transition-colors rounded-moon-i-sm"
        data-headlessui-state=""
        id="headlessui-radiogroup-option-:rb:"
        role="radio"
        tabindex="-1"
      >
        Option 2
        <div
          class="relative flex items-center justify-center w-4 h-4 aspect-square m-1 rounded-full border transition-colors after:content-[\\"\\"] after:absolute after:w-0 after:h-0 after:rounded-full after:top-1/2 after:left-1/2 after:-translate-x-1/2 after:-translate-y-1/2 after:transition-all moon-checked:after:w-2 moon-checked:after:h-2 border-trunks moon-checked:border-piccolo after:bg-piccolo"
        />
      </div>
    </div>
    <div
      id="headlessui-radiogroup-:rc:"
      role="radiogroup"
    >
      <div
        aria-checked="false"
        class="flex gap-2 cursor-pointer text-moon-14 text-bulma moon-disabled:opacity-30 moon-disabled:cursor-default"
        data-headlessui-state=""
        id="headlessui-radiogroup-option-:rd:"
        role="radio"
        tabindex="0"
      >
        <div
          class="relative flex items-center justify-center w-4 h-4 aspect-square m-1 rounded-full border transition-colors after:content-[\\"\\"] after:absolute after:w-0 after:h-0 after:rounded-full after:top-1/2 after:left-1/2 after:-translate-x-1/2 after:-translate-y-1/2 after:transition-all moon-checked:after:w-2 moon-checked:after:h-2 moon-checked:border-piccolo after:bg-piccolo border-chichi"
        />
        Option 1
      </div>
      <div
        aria-checked="false"
        class="flex gap-2 cursor-pointer text-moon-14 text-bulma moon-disabled:opacity-30 moon-disabled:cursor-default"
        data-headlessui-state=""
        id="headlessui-radiogroup-option-:re:"
        role="radio"
        tabindex="-1"
      >
        <div
          class="relative flex items-center justify-center w-4 h-4 aspect-square m-1 rounded-full border transition-colors after:content-[\\"\\"] after:absolute after:w-0 after:h-0 after:rounded-full after:top-1/2 after:left-1/2 after:-translate-x-1/2 after:-translate-y-1/2 after:transition-all moon-checked:after:w-2 moon-checked:after:h-2 border-trunks moon-checked:border-nappa after:bg-nappa"
        />
        Option 2
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Radio renders Default 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        id="headlessui-radiogroup-:r0:"
        role="radiogroup"
      >
        <div
          aria-checked="false"
          class="flex gap-2 cursor-pointer text-moon-14 text-bulma moon-disabled:opacity-30 moon-disabled:cursor-default"
          data-headlessui-state=""
          id="headlessui-radiogroup-option-:r1:"
          role="radio"
          tabindex="0"
        >
          <div
            class="relative flex items-center justify-center w-4 h-4 aspect-square m-1 rounded-full border transition-colors after:content-[\\"\\"] after:absolute after:w-0 after:h-0 after:rounded-full after:top-1/2 after:left-1/2 after:-translate-x-1/2 after:-translate-y-1/2 after:transition-all moon-checked:after:w-2 moon-checked:after:h-2 border-trunks moon-checked:border-piccolo after:bg-piccolo"
          />
        </div>
        <div
          aria-checked="false"
          class="flex gap-2 cursor-pointer text-moon-14 text-bulma moon-disabled:opacity-30 moon-disabled:cursor-default"
          data-headlessui-state=""
          id="headlessui-radiogroup-option-:r2:"
          role="radio"
          tabindex="-1"
        >
          <div
            class="relative flex items-center justify-center w-4 h-4 aspect-square m-1 rounded-full border transition-colors after:content-[\\"\\"] after:absolute after:w-0 after:h-0 after:rounded-full after:top-1/2 after:left-1/2 after:-translate-x-1/2 after:-translate-y-1/2 after:transition-all moon-checked:after:w-2 moon-checked:after:h-2 border-trunks moon-checked:border-piccolo after:bg-piccolo"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      id="headlessui-radiogroup-:r0:"
      role="radiogroup"
    >
      <div
        aria-checked="false"
        class="flex gap-2 cursor-pointer text-moon-14 text-bulma moon-disabled:opacity-30 moon-disabled:cursor-default"
        data-headlessui-state=""
        id="headlessui-radiogroup-option-:r1:"
        role="radio"
        tabindex="0"
      >
        <div
          class="relative flex items-center justify-center w-4 h-4 aspect-square m-1 rounded-full border transition-colors after:content-[\\"\\"] after:absolute after:w-0 after:h-0 after:rounded-full after:top-1/2 after:left-1/2 after:-translate-x-1/2 after:-translate-y-1/2 after:transition-all moon-checked:after:w-2 moon-checked:after:h-2 border-trunks moon-checked:border-piccolo after:bg-piccolo"
        />
      </div>
      <div
        aria-checked="false"
        class="flex gap-2 cursor-pointer text-moon-14 text-bulma moon-disabled:opacity-30 moon-disabled:cursor-default"
        data-headlessui-state=""
        id="headlessui-radiogroup-option-:r2:"
        role="radio"
        tabindex="-1"
      >
        <div
          class="relative flex items-center justify-center w-4 h-4 aspect-square m-1 rounded-full border transition-colors after:content-[\\"\\"] after:absolute after:w-0 after:h-0 after:rounded-full after:top-1/2 after:left-1/2 after:-translate-x-1/2 after:-translate-y-1/2 after:transition-all moon-checked:after:w-2 moon-checked:after:h-2 border-trunks moon-checked:border-piccolo after:bg-piccolo"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Radio renders Uncontrolled 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        id="headlessui-radiogroup-:ri:"
        role="radiogroup"
      >
        <div
          aria-checked="false"
          class="flex gap-2 cursor-pointer text-moon-14 text-bulma moon-disabled:opacity-30 moon-disabled:cursor-default"
          data-headlessui-state=""
          id="headlessui-radiogroup-option-:rj:"
          role="radio"
          tabindex="-1"
        >
          <div
            class="relative flex items-center justify-center w-4 h-4 aspect-square m-1 rounded-full border transition-colors after:content-[\\"\\"] after:absolute after:w-0 after:h-0 after:rounded-full after:top-1/2 after:left-1/2 after:-translate-x-1/2 after:-translate-y-1/2 after:transition-all moon-checked:after:w-2 moon-checked:after:h-2 border-trunks moon-checked:border-piccolo after:bg-piccolo"
          />
          Option 1
        </div>
        <div
          aria-checked="true"
          class="flex gap-2 cursor-pointer text-moon-14 text-bulma moon-disabled:opacity-30 moon-disabled:cursor-default"
          data-headlessui-state="checked"
          id="headlessui-radiogroup-option-:rk:"
          role="radio"
          tabindex="0"
        >
          <div
            class="relative flex items-center justify-center w-4 h-4 aspect-square m-1 rounded-full border transition-colors after:content-[\\"\\"] after:absolute after:w-0 after:h-0 after:rounded-full after:top-1/2 after:left-1/2 after:-translate-x-1/2 after:-translate-y-1/2 after:transition-all moon-checked:after:w-2 moon-checked:after:h-2 border-trunks moon-checked:border-piccolo after:bg-piccolo"
          />
          Option 2
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      id="headlessui-radiogroup-:ri:"
      role="radiogroup"
    >
      <div
        aria-checked="false"
        class="flex gap-2 cursor-pointer text-moon-14 text-bulma moon-disabled:opacity-30 moon-disabled:cursor-default"
        data-headlessui-state=""
        id="headlessui-radiogroup-option-:rj:"
        role="radio"
        tabindex="-1"
      >
        <div
          class="relative flex items-center justify-center w-4 h-4 aspect-square m-1 rounded-full border transition-colors after:content-[\\"\\"] after:absolute after:w-0 after:h-0 after:rounded-full after:top-1/2 after:left-1/2 after:-translate-x-1/2 after:-translate-y-1/2 after:transition-all moon-checked:after:w-2 moon-checked:after:h-2 border-trunks moon-checked:border-piccolo after:bg-piccolo"
        />
        Option 1
      </div>
      <div
        aria-checked="true"
        class="flex gap-2 cursor-pointer text-moon-14 text-bulma moon-disabled:opacity-30 moon-disabled:cursor-default"
        data-headlessui-state="checked"
        id="headlessui-radiogroup-option-:rk:"
        role="radio"
        tabindex="0"
      >
        <div
          class="relative flex items-center justify-center w-4 h-4 aspect-square m-1 rounded-full border transition-colors after:content-[\\"\\"] after:absolute after:w-0 after:h-0 after:rounded-full after:top-1/2 after:left-1/2 after:-translate-x-1/2 after:-translate-y-1/2 after:transition-all moon-checked:after:w-2 moon-checked:after:h-2 border-trunks moon-checked:border-piccolo after:bg-piccolo"
        />
        Option 2
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Radio renders WithLabel 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        id="headlessui-radiogroup-:r3:"
        role="radiogroup"
      >
        <div
          aria-checked="false"
          aria-disabled="true"
          class="flex gap-2 cursor-pointer text-moon-14 text-bulma moon-disabled:opacity-30 moon-disabled:cursor-default"
          data-headlessui-state="disabled"
          id="headlessui-radiogroup-option-:r4:"
          role="radio"
          tabindex="-1"
        >
          <div
            class="relative flex items-center justify-center w-4 h-4 aspect-square m-1 rounded-full border transition-colors after:content-[\\"\\"] after:absolute after:w-0 after:h-0 after:rounded-full after:top-1/2 after:left-1/2 after:-translate-x-1/2 after:-translate-y-1/2 after:transition-all moon-checked:after:w-2 moon-checked:after:h-2 border-trunks moon-checked:border-piccolo after:bg-piccolo"
          />
          Option 1
        </div>
        <div
          aria-checked="false"
          aria-disabled="true"
          class="flex gap-2 cursor-pointer text-moon-14 text-bulma moon-disabled:opacity-30 moon-disabled:cursor-default"
          data-headlessui-state="disabled"
          id="headlessui-radiogroup-option-:r5:"
          role="radio"
          tabindex="-1"
        >
          <div
            class="relative flex items-center justify-center w-4 h-4 aspect-square m-1 rounded-full border transition-colors after:content-[\\"\\"] after:absolute after:w-0 after:h-0 after:rounded-full after:top-1/2 after:left-1/2 after:-translate-x-1/2 after:-translate-y-1/2 after:transition-all moon-checked:after:w-2 moon-checked:after:h-2 border-trunks moon-checked:border-piccolo after:bg-piccolo"
          />
          Option 2
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      id="headlessui-radiogroup-:r3:"
      role="radiogroup"
    >
      <div
        aria-checked="false"
        aria-disabled="true"
        class="flex gap-2 cursor-pointer text-moon-14 text-bulma moon-disabled:opacity-30 moon-disabled:cursor-default"
        data-headlessui-state="disabled"
        id="headlessui-radiogroup-option-:r4:"
        role="radio"
        tabindex="-1"
      >
        <div
          class="relative flex items-center justify-center w-4 h-4 aspect-square m-1 rounded-full border transition-colors after:content-[\\"\\"] after:absolute after:w-0 after:h-0 after:rounded-full after:top-1/2 after:left-1/2 after:-translate-x-1/2 after:-translate-y-1/2 after:transition-all moon-checked:after:w-2 moon-checked:after:h-2 border-trunks moon-checked:border-piccolo after:bg-piccolo"
        />
        Option 1
      </div>
      <div
        aria-checked="false"
        aria-disabled="true"
        class="flex gap-2 cursor-pointer text-moon-14 text-bulma moon-disabled:opacity-30 moon-disabled:cursor-default"
        data-headlessui-state="disabled"
        id="headlessui-radiogroup-option-:r5:"
        role="radio"
        tabindex="-1"
      >
        <div
          class="relative flex items-center justify-center w-4 h-4 aspect-square m-1 rounded-full border transition-colors after:content-[\\"\\"] after:absolute after:w-0 after:h-0 after:rounded-full after:top-1/2 after:left-1/2 after:-translate-x-1/2 after:-translate-y-1/2 after:transition-all moon-checked:after:w-2 moon-checked:after:h-2 border-trunks moon-checked:border-piccolo after:bg-piccolo"
        />
        Option 2
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
